Fix clap button vertical alignment on home post cards
Add negative vertical margin to .lyket-home to compensate for
scale(0.65) keeping the original element box size.

--- a/_sass/base/_base.scss
+++ b/_sass/base/_base.scss
@@ -505,6 +505,7 @@ mjx-container {
 .lyket-home {
   transform: scale(0.65);
   transform-origin: right center;
+  margin: -0.35rem 0;
 }
 
 .lyket-bottom-center {
